Implemented map syncing

--- a/Hunter3D/Sandbox/gamemode.cfg
+++ b/Hunter3D/Sandbox/gamemode.cfg
@@ -7,7 +7,7 @@ teams                                             = team1.cfg; team2.cfg;
 gamemode_name                                     = Hunter3D
 gamemode_info                                     = A 3D voxel FPS
 
-scripts                                           = # Global.as;					#global
+scripts                                           = Global.as;					#global
 													PatronSupport.as;
 													TeamMenu.as;
 													KillMessages.as;
@@ -18,7 +18,7 @@ scripts                                           = # Global.as;					#global
 													ScoreboardRender.as;
 													# ColoredNameToggle.as;
 													# Rules.as;					#rules
-													# Server.as;					#server
+													Server.as;					#server
 													Client.as;					#client
 
 autoassign_teams                                  = no
