Actor syncing to clients only

--- a/Hunter3D/Sandbox/gamemode.cfg
+++ b/Hunter3D/Sandbox/gamemode.cfg
@@ -17,8 +17,9 @@ scripts                                           = Global.as;					#global
 													# KickAFK.as;
 													ScoreboardRender.as;
 													# ColoredNameToggle.as;
-													# Rules.as;					#rules
+													Rules.as;					#rules
 													Server.as;					#server
+													MapSyncer.as;
 													Client.as;					#client
 
 autoassign_teams                                  = no
