ModLoader and loading screen

--- a/Hunter3D/Sandbox/gamemode.cfg
+++ b/Hunter3D/Sandbox/gamemode.cfg
@@ -21,6 +21,7 @@ scripts                                           = Global.as;					#global
 													Server.as;					#server
 													MapSyncer.as;
 													Client.as;					#client
+													LoadingScreen.as;
 
 autoassign_teams                                  = no
 
