Added object teams

--- a/Hunter3D/Husk/HuskBlob.cfg
+++ b/Hunter3D/Husk/HuskBlob.cfg
@@ -6,6 +6,6 @@ $brain_factory                              =
 $attachment_factory                         =
 $inventory_factory                          =
 $name                                       = husk
-@$scripts                                   = HuskInit.as;
+@$scripts                                   = HuskInit.as; StandardControls.as;
 f32 health                                  = 0.0
 $inventory_name                             =
